[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chronicle-gist"
version = "0.2.1"
description = "The State Sidecar for AI Agents"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  {name = "Chronicle Team", email = "hello@chronicle.ai"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    "litellm>=1.0.0",
    "pydantic>=2.0.0"
]

[project.optional-dependencies]
postgres = ["asyncpg"]
redis = ["redis"]
mongo = ["motor"]

[project.urls]
"Bug Tracker" = "https://github.com/chronicle-ai/chronicle-gist/issues"
"Documentation" = "https://github.com/chronicle-ai/chronicle-gist#readme"
"Source Code" = "https://github.com/chronicle-ai/chronicle-gist"

[tool.setuptools.packages.find]
where = ["."]
include = ["chronicle_gist*"]
